--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "wdio": "wdio run ./wdio.conf.js"
   },
   "dependencies": {
-    "eslint": "^8.51.0"
+    "eslint": "^8.51.0",
+    "inquirer": "^9.2.11",
+    "rxjs": "^7.8.1"
   }
 }
