--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "eslint": "^8.51.0",
+    "geckodriver": "^4.2.1",
     "inquirer": "^9.2.11",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "wdio-chromedriver-service": "^8.1.1"
   }
 }
