--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "wdio": "wdio run ./wdio.conf.js"
   },
   "dependencies": {
+    "axios": "^1.5.1",
+    "chai": "^4.3.10",
     "eslint": "^8.51.0",
     "geckodriver": "^4.2.1",
     "inquirer": "^9.2.11",
+    "mocha": "^10.2.0",
+    "mochawesome": "^7.1.3",
     "rxjs": "^7.8.1",
     "wdio-chromedriver-service": "^8.1.1"
   }
